Fix page scrolling left/right on small screens
Closes #2

--- a/style.css
+++ b/style.css
@@ -229,7 +229,6 @@ body {
 
 .content-block {
     margin: 0 auto;
-    width: 90%;
     max-width: 60rem;
     color: #505050;
     font-family: 'rennerbook', sans-serif;
